<resources>
    <string name="app_name">QP</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_task">Create Task</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_all_tasks">AllTasks</string>
    <string name="title_activity_view_task">ViewTask</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="current_date">03/06/2019</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QP</string>
    <string name="nav_header_subtitle">Set a task!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sort_priority">Sort by Priority</string>
    <string name="sort_names">Sort by Name</string>
    <string name="sort_date">Sort by Date</string>
    <string name="deletePrompt">Delete task forever?</string>
    <string name="deleteAll">Delete All Completed Tasks?</string>
    <string name="completedTask">Completed Tasks</string>
    <string name="homePage">Home</string>

    <string name="title_hint"><font size="50">Title</font></string>

    <string name="add_reminder">Remind me to...</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="title">Title</string>
    <string name="channel_description">desc</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="title_activity_customization">Customization</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_project">CreateProject</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_projects">projects</string>

    <string name="title_activity_action_map">ActionMap</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>




