
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="355dp"
        android:layout_marginTop="390dp"
        android:clickable="true"
        fab:srcCompat="@drawable/ic_notifications_on_white_24dp" />

    <LinearLayout
        android:id="@+id/add_reminder_layout_top"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/background_color"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="276dp"
            android:layout_height="90dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:gravity="top|left"
            android:hint="@string/add_reminder"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColor="@android:color/black"
            android:textColorHint="@color/primary_text_disabled_material_dark"
            android:textSize="25dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_below="@id/add_reminder_layout_top"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">



            <RelativeLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="setDate"
                android:clickable="true">


                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_view_day_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/date_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setTime"
                android:id="@+id/time"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_access_time_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/time_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_text"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_time"
                        android:textSize="15dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/repeat"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_sync_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/repeat_ll"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat"
                        android:textSize="15dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="8dp"
                    android:onClick="onSwitchRepeat"
                    android:checked="true"
                    android:textOn="On"
                    android:textOff="Off"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatNo"
                android:clickable="true"
                android:onClick="setRepeatNo"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_unfold_more_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_no_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_no"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatType"
                android:clickable="true"
                android:onClick="selectRepeatType"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_subject_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_type_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_type"
                        android:textSize="15dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/add_reminder_layout_top"
        android:background="@drawable/toolbar_dropshadow" />



</RelativeLayout>
